refactor(account): Made Lombok model work, fixed generated interface name based on a tag

--- a/account/build.gradle
+++ b/account/build.gradle
@@ -32,7 +32,10 @@ openApiGenerate {
 	skipValidateSpec = true
 	configOptions = [
 		openApiNullable: "false",
-		interfaceOnly:   "true"
+		interfaceOnly:   "true",
+		useTags: "true",
+		additionalModelTypeAnnotations: "@lombok.Builder @lombok.NoArgsConstructor @lombok.AllArgsConstructor",
+
 	]
 }
 
